@@ -1,4 +1,5 @@
 Version 5.3.0.8
+Required modules are instantiated in the order that they are required
 Added variable-reference->module-path-index
 Added syntax-local-submodules
 Added relative-in
